[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-connection-test"
version = "0.1.2"
description = "Advanced network connectivity diagnostics for Python applications"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "raffaellof" }
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.0",
    "certifi",
]
keywords = [
    "network",
    "connectivity",
    "proxy",
    "captive-portal",
    "async",
    "diagnostics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/raffaellof/connection-test"
Repository = "https://github.com/raffaellof/connection-test"
Issues = "https://github.com/raffaellof/connection-test/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["connection_test*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

